@@ -78,11 +78,6 @@ extern int BX_read_sockets();
 extern int identd;
 extern int doing_notice;
 
-extern int (*dcc_open_func) (int, int, unsigned long, int);
-extern int (*dcc_output_func) (int, int, char *, int);
-extern int (*dcc_input_func)  (int, int, char *, int, int);
-extern int (*dcc_close_func) (int, unsigned long, int);
-
 int (*serv_open_func) (int, unsigned long, int);
 extern int (*serv_output_func) (int, int, char *, int);
 extern int (*serv_input_func)  (int, char *, int, int, int);
